--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
     <link rel="stylesheet" href="./styles/styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav>
         <div class="head">
-            <h3>TechWave</h3>
+            <h3>Tech<span>Wave</span></h3>
         </div>
         <div class="about">
             <p>About</p>
@@ -18,9 +18,19 @@
             <p>Host</p>
         </div>
         <div>
-            <button class="btn-1">Subscribe</button>
+            <button class="btn-1">Subscribe<i class="fa-solid fa-arrow-right"></i></button>
         </div>
+        
     </nav>
+    <section>
+            <div class="banner-container">
+                <img src="./assets/hero-circle.png" alt="">
+            </div>
+            <div class="image-1">
+                <img src="./assets/microphone.png" alt="">
+
+            </div>
+        </section>
     
 </body>
 </html>
