banner design complete

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="banner-msg">
                 <h2>TechWave</h2>
                 <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
-                <button>Listen on Spotify</button>
-                <button>Subscribe</button>
+                <button class="btn-2"><i class="fa-brands fa-spotify"></i>Listen on Spotify</button>
+                <button class="btn-3"><img src="assets/message.png" alt="">Subscribe</button>
             </div>
         
      </section>
