--- a/index.html
+++ b/index.html
@@ -113,6 +113,58 @@ Join thousands of young professionals and tech enthusiasts who start their day w
         </div>
 
      </section>
+     <section class="feature-host">
+        <div class="card-heading">
+            <h2>Featured Episodes</h2>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <iframe width="380" height="214" src="https://www.youtube.com/embed/_GE6zf_hH48?si=i5qvT9Ty_QKosF4t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3>The Future of AI in Everyday Life</h3>
+                <p>Exploring how artificial intelligence is<br> transforming our daily routines and what to<br> expect in the next decade.</p>
+                <span><img src="./assets/clock.png" alt="">42 min</span>
+
+            </div>
+            <div class="card">
+                <iframe width="380" height="214" src="https://www.youtube.com/embed/heE_lieGsZ8?si=nOvis3S-RqadDbqn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3>Building Better Habits for Remote Work</h3>
+                <p>Practical strategies for staying productive<br> and maintaining work-life balance in a<br> remote environment.</p>
+                <span><img src="./assets/clock.png" alt="">35 min</span>
+
+            </div>
+            <div class="card">
+                <iframe width="380" height="214" src="https://www.youtube.com/embed/pEl3-0GHyoQ?si=htYchSAOt-SyEGAu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3>Career Growth in Tech: A Roadmap</h3>
+                <p>Expert advice on navigating your tech<br> career from junior developer to senior<br> leadership roles.</p>
+                <span><img src="./assets/clock.png" alt="">42 min</span>
+
+            </div>
+
+        </div>
+        <div class="host-heading">
+            <h2>Meet the Host</h2>
+
+        </div>
+        <div class="host-container">
+            <div class="host-image">
+                <img src="./assets/host.png" alt="">
+
+            </div>
+            <div class="host-about">
+                <h3>Alex Kumar</h3>
+                <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,<br> working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and<br> practical advice for anyone looking to grow in tech.</p>
+
+                <img src="./assets/linkedin.png" alt="link">
+                <img src="./assets/x.png" alt="link">
+                <img src="./assets/instagram.png" alt="link">
+                <img src="./assets/youtube.png" alt="link">
+
+
+            </div>
+            
+        </div>
+
+     </section>
     
 </body>
 </html>
